TrackPanel no longer implements the zoom tool...
... Also changed the behavior of drawing of dashed lines: make them
disappear when they approach close enough that right-up will zoom out,
not in.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -582,6 +582,8 @@ audacity_SOURCES = \
 	tracks/ui/TrackUI.cpp \
 	tracks/ui/TrackVRulerControls.cpp \
 	tracks/ui/TrackVRulerControls.h \
+	tracks/ui/ZoomHandle.cpp \
+	tracks/ui/ZoomHandle.h \
 	widgets/AButton.cpp \
 	widgets/AButton.h \
 	widgets/ASlider.cpp \
