--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -243,6 +243,7 @@
     <ClCompile Include="..\..\..\src\tracks\ui\TrackControls.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackUI.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackVRulerControls.cpp" />
+    <ClCompile Include="..\..\..\src\tracks\ui\ZoomHandle.cpp" />
     <ClCompile Include="..\..\..\src\UIHandle.cpp" />
     <ClCompile Include="..\..\..\src\UndoManager.cpp" />
     <ClCompile Include="..\..\..\src\UserException.cpp" />
@@ -501,6 +502,7 @@
     <ClInclude Include="..\..\..\src\TranslatableStringArray.h" />
     <ClInclude Include="..\..\..\src\UserException.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\TrackControls.h" />
+    <ClInclude Include="..\..\..\src\tracks\ui\ZoomHandle.h" />
     <ClInclude Include="..\..\..\src\tracks\timetrack\ui\TimeTrackVRulerControls.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\TrackVRulerControls.h" />
     <ClInclude Include="..\..\..\src\UIHandle.h" />
