--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -950,6 +950,9 @@
     <ClCompile Include="..\..\..\src\tracks\ui\TrackControls.cpp">
       <Filter>src\tracks\ui</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\tracks\ui\ZoomHandle.cpp">
+      <Filter>src\tracks\ui</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\src\tracks\timetrack\ui\TimeTrackControls.cpp">
       <Filter>src\tracks\timetrack\ui</Filter>
     </ClCompile>
@@ -1892,6 +1895,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\tracks\ui\TrackControls.h">
+      <Filter>src\tracks\ui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\tracks\ui\ZoomHandle.h">
       <Filter>src\tracks\ui</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\tracks\timetrack\ui\TimeTrackControls.h">
