--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -951,6 +951,9 @@
       <Filter>src\tracks\ui</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\tracks\ui\ZoomHandle.cpp">
+      <Filter>src\tracks\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\tracks\ui\TimeShiftHandle.cpp">
       <Filter>src\tracks\ui</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\tracks\timetrack\ui\TimeTrackControls.cpp">
@@ -1983,6 +1986,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\src\tracks\playabletrack\wavetrack\ui\SampleHandle.h">
       <Filter>src\tracks\playabletrack\wavetrack\ui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\tracks\ui\TimeShiftHandle.h">
+      <Filter>src\tracks\ui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
