TrackPanel no longer implements the envelope tool...
... also implement ESC key for it

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -575,6 +575,8 @@ audacity_SOURCES = \
 	tracks/ui/CommonTrackPanelCell.h \
 	tracks/ui/EditCursorOverlay.cpp \
 	tracks/ui/EditCursorOverlay.h \
+	tracks/ui/EnvelopeHandle.cpp \
+	tracks/ui/EnvelopeHandle.h \
 	tracks/ui/PlayIndicatorOverlay.cpp \
 	tracks/ui/PlayIndicatorOverlay.h \
 	tracks/ui/Scrubbing.cpp \
