--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -622,6 +622,8 @@ audacity_SOURCES = \
 	widgets/Overlay.h \
 	widgets/OverlayPanel.cpp \
 	widgets/OverlayPanel.h \
+	widgets/PopupMenuTable.cpp \
+	widgets/PopupMenuTable.h \
 	widgets/ProgressDialog.cpp \
 	widgets/ProgressDialog.h \
 	widgets/Ruler.cpp \
