Define a base class that will be useful for several track control buttons

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -573,6 +573,8 @@ audacity_SOURCES = \
 	tracks/timetrack/ui/TimeTrackUI.cpp \
 	tracks/timetrack/ui/TimeTrackVRulerControls.cpp \
 	tracks/timetrack/ui/TimeTrackVRulerControls.h \
+	tracks/ui/ButtonHandle.h \
+	tracks/ui/ButtonHandle.cpp \
 	tracks/ui/CommonTrackPanelCell.cpp \
 	tracks/ui/CommonTrackPanelCell.h \
 	tracks/ui/EditCursorOverlay.cpp \
