Define a base class that will be useful for several track control sliders

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -585,6 +585,8 @@ audacity_SOURCES = \
 	tracks/ui/PlayIndicatorOverlay.h \
 	tracks/ui/Scrubbing.cpp \
 	tracks/ui/Scrubbing.h \
+	tracks/ui/SliderHandle.cpp \
+	tracks/ui/SliderHandle.h \
 	tracks/ui/TimeShiftHandle.cpp \
 	tracks/ui/TimeShiftHandle.h \
 	tracks/ui/TrackControls.cpp \
