--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -248,6 +248,7 @@
     <ClCompile Include="..\..\..\src\tracks\ui\Scrubbing.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\SliderHandle.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TimeShiftHandle.cpp" />
+    <ClCompile Include="..\..\..\src\tracks\ui\TrackButtonHandles.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackControls.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackUI.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackVRulerControls.cpp" />
@@ -517,6 +518,7 @@
     <ClInclude Include="..\..\..\src\UserException.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\SliderHandle.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\TimeShiftHandle.h" />
+    <ClInclude Include="..\..\..\src\tracks\ui\TrackButtonHandles.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\TrackControls.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\ZoomHandle.h" />
     <ClInclude Include="..\..\..\src\tracks\timetrack\ui\TimeTrackVRulerControls.h" />
