TrackPanel no longer implements track selection click or rearrange drag...
... also implement ESC key for the drag

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -601,6 +601,8 @@ audacity_SOURCES = \
 	tracks/ui/TrackButtonHandles.h \
 	tracks/ui/TrackControls.cpp \
 	tracks/ui/TrackControls.h \
+	tracks/ui/TrackSelectHandle.cpp \
+	tracks/ui/TrackSelectHandle.h \
 	tracks/ui/TrackUI.cpp \
 	tracks/ui/TrackVRulerControls.cpp \
 	tracks/ui/TrackVRulerControls.h \
