--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -251,6 +251,7 @@
     <ClCompile Include="..\..\..\src\tracks\ui\TimeShiftHandle.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackButtonHandles.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackControls.cpp" />
+    <ClCompile Include="..\..\..\src\tracks\ui\TrackSelectHandle.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackUI.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\TrackVRulerControls.cpp" />
     <ClCompile Include="..\..\..\src\tracks\ui\ZoomHandle.cpp" />
@@ -522,6 +523,7 @@
     <ClInclude Include="..\..\..\src\tracks\ui\TimeShiftHandle.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\TrackButtonHandles.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\TrackControls.h" />
+    <ClInclude Include="..\..\..\src\tracks\ui\TrackSelectHandle.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\ZoomHandle.h" />
     <ClInclude Include="..\..\..\src\tracks\timetrack\ui\TimeTrackVRulerControls.h" />
     <ClInclude Include="..\..\..\src\tracks\ui\TrackVRulerControls.h" />
