Move track resizing code out of TrackPanel.cpp, though it still...
... cooperates more closely with TrackPanel than the other UIHandle subclasses
do.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -249,6 +249,8 @@ audacity_SOURCES = \
 	TrackPanelCellIterator.h \
 	TrackPanelListener.h \
 	TrackPanelMouseEvent.h \
+	TrackPanelResizeHandle.cpp \
+	TrackPanelResizeHandle.h \
 	TranslatableStringArray.h \
 	UIHandle.h \
 	UIHandle.cpp \
